# automated-testing

./: .gitignore  main.py  pyproject.toml  readme.md  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/calculator/: calc.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculator.py
