[metadata]
name = calculator
version = 0.1.0
description = learning how to automate tests in python.
authors = Kai Benothman
license = MIT

[options]
packages = calculator
install_requires = requests>=2
python_requires = >= 3.6
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
calculator = py.typed

[flake8]
max-line-length = 160
